kubernetes/k8s-manifests/deployment_definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-demo-2-api
spec:
  replicas: 3
  selector:
    matchLabels:
      type: api
      service: go-demo-2
  minReadySeconds: 1        ###defines the minimum number of seconds before Kubernetes starts considering the Pods healthy.
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 5   ###defines the number of old ReplicaSets we can rollback
  strategy:
    type: RollingUpdate   ###can be either the RollingUpdate or the Recreate type (kill all pods before update, better for single replicas).
    rollingUpdate:
      maxSurge: 1  ###controls how many new pods can be created at a time when transitioning from an old version of a pod to a new one.
      maxUnavailable: 1   
  template:
    metadata:
      labels:
        type: api
        service: go-demo-2
        language: go
    spec:
      containers:
      - name: api
        image: vfarcic/go-demo-2
        readinessProbe:
          httpGet:
            path: /demo/hello
            port: 8080
          periodSeconds: 1
        livenessProbe:
          httpGet:
            path: /demo/hello
            port: 8080
